# TetRL-Arena

./: LICENSE  README.md  Tetris.cpp  Tetris.hpp  pyproject.toml  tetris.cpp  tetris.hpp
benchmarks/cpp/: Makefile
benchmarks/cpp/engine/: placement_search_bench.cpp
experiments/: Makefile  mcts_tetris_ai.cpp
src/tetrl/: __init__.py  native_layout.py
src/tetrl/csrc/engine/: placement_search.cpp  placement_search.hpp  placement_search_slow.cpp  tetris.cpp  tetris.hpp
src/tetrl/csrc/envs/step/: step.hpp
src/tetrl/dynamic_library/: __init__.py  _dynamic_library.py  _types.py
src/tetrl/engine/: native.py  state.py
src/tetrl/envs/step/: __init__.py  defaults.py  env.py  feature.py  native.py  reward.py
tests/cpp/: Makefile
tests/cpp/engine/: placement_search_test.cpp
