[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetrl"
version = "0.1.0"
description = "TetRL: Tetris reinforcement-learning toolkit"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "gymnasium>=1.1.1",
    "numpy>=2.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["tetrl*"]

[tool.setuptools.package-data]
tetrl = [
    "csrc/**/*.cpp",
    "csrc/**/*.hpp",
]
